# star-travex

./: .gitignore  .gitmodules  .travis.yml  AgUStepLinkDef_8h.html  AgUStepLinkDef_8h_source.html  AgUStep_8cxx.html  AgUStep_8cxx_source.html  AgUStep_8h.html  AgUStep_8h_source.html  ApplyClassifier_8C.html  ApplyClassifier_8C_source.html  Ask.h  CMakeLists.txt  DecayVertexHists_8cxx.html  DecayVertexHists_8cxx_source.html  DecayVertexHists_8h.html  DecayVertexHists_8h_source.html  FindROOT.cmake  GeaRootIOLinkDef_8h.html  GeaRootIOLinkDef_8h_source.html  H2D_8cxx.html  H2D_8cxx_source.html  H2D_8h.html  H2D_8h_source.html  H3D_8cxx.html  H3D_8cxx_source.html  H3D_8h.html  H3D_8h_source.html  LinkDef.h  MuMcPrVKFV2012.C  MuMcPrVKFV2012.h  MuMcPrVKFV2012_8C.html  MuMcPrVKFV2012_8C_source.html  MuMcPrVKFV2012_8h.html  MuMcPrVKFV2012_8h_source.html  PrgOptionProcessor_8cxx.html  PrgOptionProcessor_8cxx_source.html  PrgOptionProcessor_8h.html  PrgOptionProcessor_8h_source.html  Profile2D_8cxx.html  (+350 more)
GeaRootIO/: AgUStep.cxx  CMakeLists.txt  GeaRootIOLinkDef.h  TGeaEvent.cxx  TGeaEvent.h
StiHify/: CMakeLists.txt  LinkDef.h  README.md  StMcAnalysisMaker.cxx  StMcAnalysisMakerLinkDef.h  StiHifyAnalysisTreeMaker.cxx  StiHifyAnalysisTreeMaker.h  StiHifyEvent.cxx  StiHifyEvent.h  StiHifyHistContainer.cxx  StiHifyHistContainer.h  StiHifyPrgOptions.cxx  StiHifyPrgOptions.h  StiHifyRatiosHistContainer.cxx  StiHifyRatiosHistContainer.h  StiHifyRootFile.cxx  StiHifyRootFile.h  StiHifyTreeMaker.cxx  StiHifyTreeMaker.h  save_sti_detectors.txt
StiRootIO/: CMakeLists.txt  H2D.cxx  H2D.h  H3D.cxx  LinkDef.h  PrgOptionProcessor.cxx  PrgOptionProcessor.h  Profile2D.cxx  Profile2D.h  Profile3D.cxx  Profile3D.h  StiHistContainer.cxx  StiHistContainer.h  StiHitFilters.h  StiRootFile.cxx  StiRootFile.h  StiRootIOLinkDef.h  StiTreeMaker.cxx  StiTreeMaker.h  StiVolumeFilter.cxx  StiVolumeFilter.h  TStiEvent.cxx  TStiEvent.h  TStiHit.cxx  TStiHit.h  TStiHitProxy.cxx  TStiHitProxy.h  TStiKalmanTrack.cxx  TStiKalmanTrack.h  TStiKalmanTrackNode.cxx  TStiKalmanTrackNode.h
StiScan/: CMakeLists.txt  H3D.cxx  LinkDef.h  PrgOptionProcessor.cxx  PrgOptionProcessor.h  Profile2D.cxx  Profile3D.cxx  Profile3D.h  README.md  StiScanEvent.cxx  StiScanEvent.h  StiScanHftTreeMaker.cxx  StiScanHftTreeMaker.h  StiScanHistContainer.cxx  StiScanHistContainer.h  StiScanHistsByVolume.cxx  StiScanHistsByVolume.h  StiScanLinkDef.h  StiScanPrgOptions.cxx  StiScanPrgOptions.h  StiScanRatiosHistContainer.cxx  StiScanRatiosHistContainer.h  StiScanRootFile.cxx  StiScanRootFile.h  StiScanTreeMaker.cxx  StiScanTreeMaker.h  TStiHit.cxx  TStiKalmanTrack.cxx  TStiKalmanTrack.h  TStiKalmanTrackNode.cxx  TStiKalmanTrackNode.h
VtxEval/: DecayVertexHists.cxx  DecayVertexHists.h  README.md  StarEventHistContainer.cxx  TMVAClassification.C  VertexRootFile.cxx  VtxRecoProgramOptions.cxx  VtxRecoProgramOptions.h  VxEff.C  lMuDst.C  load_libs.C
VtxEval/supple/: filelist_zerobias.txt  submit_jobs_reco_fzd.sh
cmake/: ExternalProject_star-vertex.cmake  ExternalProject_trackml.cmake  ExternalProject_travex.cmake  FindBoost.cmake  FindROOT.cmake
common/: bottom.php  common.js  footer.html  gdriveImage.js  gdrive_file_map.gs  header.html  plot_jsroot.js  toc.js
css/: main.css
doc/: Doxyfile
fast-offline-qa/: index.html  plots.html
macros/: plot_lambda.C  plot_robust_chi2.C  stack_hists.C  style_hists.C  style_hists_stack.C
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+46 more)
src-tools/: config.h.in  stigeo.cxx  stiglob.cxx  stihify.cc  stihify.cxx  stiscan.cc  utils.h  vtxhist.cc  vtxreco.cxx
src-web/common/: PlotHelper.php  bottom.php  config.php  gdriveImage.js  gdrive_file_map.gs  head.php  header.html  toc.js
src-web/css/: main.css
src-web/stihify/: index.php  plots.php
src-web/stiscan/: PlotHelper.php  config.php  index.php  plots.php
src-web/vtxeval/: index.html  index.php  plots.html  plots.php
src/common/: root_v6.cxx  root_v6.h  stiglob.cxx
src/evedisp/: EventReader.cxx  EventReader.h  GuiManager.h  ProgramOptions.cxx  ProgramOptions.h  evedisp.cxx  evedisp_config_stevent.ini  evedisp_config_trackml.ini
src/gearootio/: AgUStep.h  AgUStepLinkDef.h
src/geo/: ProgramOptions.cxx  common.cxx  common.h  stargeo.cxx  stigeo.cxx  tgeo2shapes.cxx  tgeo2shapes_config.ini  viewTGeo.C
src/stihify/: README.md  StMcAnalysisMaker.cxx  StMcAnalysisMaker.h  StiHifyAnalysisTreeMaker.cxx  (+13 more)
stihify/: index.php  plots.php
stiscan/: index.php
supple/: EMBEDDING_TEMPLATE.xml  bfcMixer_pythia.C  embed_template_P10ik.xml  job_template_embedding_generic.xml  job_template_embedding_jpsi.xml  job_template_embedding_wbos.xml  job_template_reco.xml  job_template_reco_fzd.xml  job_template_star_hify.xml  job_template_tvx_hify_star.xml  load_libs.C  run_star_hify.sh  run_tvx_hify_star.sh  simWRequest.kumac  starlight_Jpsi_ee.kumac  starsim_stepper.C  starsim_zslice_multi_z.kumac  starsim_zslice_single_z.kumac  subEmbeddingTemplate.sh  submit.tcsh  submit_jobs_embedding_generic.sh  submit_jobs_embedding_jpsi.sh  submit_jobs_embedding_wbos.sh  submit_jobs_reco.sh  submit_jobs_reco_fzd.sh  submit_jobs_star_hify.sh  submit_jobs_tvx_hify_star.sh
vtxeval/: ApplyClassifier.C  CMakeLists.txt  MuMcPrVKFV2012.h  StarEventHistContainer.cxx  StarEventHistContainer.h  StarVertexHftHistContainer.h  VertexEvalLinkDef.h  VertexRootFile.cxx  VxEff.h  index.html  index.php  plots.html  plots.php  plots2.html  plots_js.html  utils.h  vtxhist.cc
vtxeval/supple/: filelist_wbos_embed.txt  job_template_embedding_jpsi.xml  job_template_embedding_wbos.xml  simWRequest.kumac  starlight_Jpsi_ee.kumac  submit_jobs_embedding_wbos.sh
(+50 files in other folders)
